Extending the Personal Web Site Starter Kit

--- a/Web/web.config
+++ b/Web/web.config
@@ -7,9 +7,13 @@
 		<add name="LocalSqlServer" connectionString="Data Source=.\SQLExpress;Integrated Security=True;User Instance=True;AttachDBFilename=|DataDirectory|aspnetdb.mdf"/>
 	</connectionStrings>
 	<system.web>
-		<pages styleSheetTheme="White" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/>
+    <pages styleSheetTheme="White" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
+      <namespaces>
+        <add namespace="Pers.Domain"/>
+      </namespaces>
+    </pages>
 		<customErrors mode="RemoteOnly"/>
-		<compilation debug="true" targetFramework="4.0"/>
+    <compilation debug="true" targetFramework="4.0"></compilation>
 		<authentication mode="Forms">
 			<forms loginUrl="Default.aspx" protection="Validation" timeout="300"/>
 		</authentication>
