--- a/Web/web.config
+++ b/Web/web.config
@@ -2,10 +2,10 @@
 <configuration>
 	<connectionStrings>
 		<!--<add name="Personal" connectionString="Data Source=.\SQLExpress;Integrated Security=True;User Instance=True;AttachDBFilename=|DataDirectory|Personal.mdf" providerName="System.Data.SqlClient"/>-->
-    <add name="Personal" connectionString="Persist Security Info=False;Integrated Security=true;Initial Catalog=Personal;Server=.\MSSQLSERVER2008" providerName="System.Data.SqlClient"/>
+    <add name="Personal" connectionString="Persist Security Info=False;Integrated Security=true;Initial Catalog=Personal;Server=." providerName="System.Data.SqlClient"/>
 		<remove name="LocalSqlServer"/>
 		<!--<add name="LocalSqlServer" connectionString="Data Source=.\SQLExpress;Integrated Security=True;User Instance=True;AttachDBFilename=|DataDirectory|aspnetdb.mdf"/>-->
-    <add name="LocalSqlServer" connectionString="Persist Security Info=False;Integrated Security=true;Initial Catalog=Personal;Server=.\MSSQLSERVER2008"/>
+    <add name="LocalSqlServer" connectionString="Persist Security Info=False;Integrated Security=true;Initial Catalog=Personal;Server=."/>
 	</connectionStrings>
 	<system.web>
     <pages styleSheetTheme="White" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
@@ -21,7 +21,7 @@
 		<authorization>
 			<allow users="*"/>
 		</authorization>
-		<globalization requestEncoding="utf-8" responseEncoding="utf-8"/>
+		<globalization requestEncoding="utf-8" responseEncoding="utf-8" culture="auto" uiCulture="auto"/>
 		<roleManager enabled="true"/>
 		<siteMap defaultProvider="XmlSiteMapProvider" enabled="true">
 			<providers>
