--- a/Pers.Domain/Pers.Domain.csproj
+++ b/Pers.Domain/Pers.Domain.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Abstract\ISiteContent.cs" />
     <Compile Include="Abstract\ISiteContentManagementRepository.cs" />
     <Compile Include="Abstract\ISiteContentManagementService.cs" />
+    <Compile Include="IUploadDirectorySearcher.cs" />
     <Compile Include="Photo.cs" />
     <Compile Include="PhotoManager.cs" />
     <Compile Include="PhotoSize.cs" />
@@ -64,6 +65,7 @@
     <Compile Include="SiteContent.cs" />
     <Compile Include="SiteContentManagementService.cs" />
     <Compile Include="SiteContentManager.cs" />
+    <Compile Include="UploadDirectorySearcher.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Utils\" />
